Add REST API, parallel bulk registration, and fix thread exhaustion in crawler
- Replace StructuredTaskScope in DocTreeCrawler with sequential BFS to prevent
  pthread exhaustion (EAGAIN) caused by nested virtual thread spawning
- Parallelize registerBulk() at library level using StructuredTaskScope for
  safe concurrent crawling across different hosts
- Add DocsController REST API (/api/docs/*) for manual testing and control
- Add docs-register-bulk MCP tool for parallel multi-library registration
- Fix jooq doc-sources.yml URL from hardcoded 'latest' to {majorMinor} template
- Use kotlin.time.measureTime for duration tracking in DocTreeCrawler

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>